--- a/nik_cv_style.css
+++ b/nik_cv_style.css
@@ -22,9 +22,9 @@
     margin-top: 10%;
 }
 #land{
-    margin-left: 10%;overflow: hidden;
-    object-fit: cover;
-    width: fit-content;
+    width: 100%;
+    vertical-align: middle;
+    border: 0;
 }
 .profile{
     float: center;
